[gd_scene load_steps=2 format=3 uid="uid://b7uwbh0qvijxf"]

[ext_resource type="Script" path="res://scenes/gameplay/pause-layer/audio_sliders.gd" id="1_bjphg"]

[node name="AudioSliders" type="HBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_bjphg")

[node name="Filler1" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume: "
horizontal_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume: "
horizontal_alignment = 2

[node name="Sliders" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
scrollable = false

[node name="SFXSlider" type="HSlider" parent="Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
scrollable = false

[node name="Filler2" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="Sliders/MusicSlider" to="." method="on_music_slider_value_changed"]
[connection signal="value_changed" from="Sliders/SFXSlider" to="." method="on_sfx_slider_value_changed"]
